sample/ebnf/ebnf.txt
syntax      ::= ( rule )+
rule        ::= 'id' ( '::=' | '->' ) expression
expression  ::= term ( '|' term )* ( '|' | )
term        ::= ( factor )+
factor      ::= ( 'id' | 'text' | '(' expression ')' ) ( '+' | '*' | )
